--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -1,3 +1,10 @@
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 /* Additional responsive adjustments */
 @media (max-width: 1200px) {
     .container {
